[project]
name = "sandjig"
version = "0.1.0"
description = "Agent-native job state management API service for async APIs"
authors = [{ name = "Kiconia Works", email = "developers@kiconiaworks.com" }]
readme = "README.md"
keywords = ["python", "async-api", "job-state", "agent-native"]
requires-python = ">=3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"

dependencies = [
    "flask",
    "flask-basicauth",
    "pyyaml",
    "boto3",
    "pynamodb",
    "pydantic>=2",
    "flask-pydantic-spec",
    "zappa",
]

[project.urls]
Repository = "https://github.com/monkut/sandjig"

[dependency-groups]
dev = ["pyright", "ruff", "pytest"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src/sandjig"]
exclude = ["**/.venv", "tmp/", "**/node_modules/", "**/__pycache__", "**/*.pyc", "tests/"]
typeCheckingMode = "basic"
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = 1

[tool.ruff]
line-length = 130
indent-width = 4
target-version = "py314"
exclude = [".git", ".venv", "**/node_modules/", "**/.volta"]
fix = true
respect-gitignore = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
extend-per-file-ignores = { "**/__init__.py" = ["I", "F403"] }
extend-safe-fixes = [
    "D200",
    "ANN204",
]
ignore = [
    "A005",
    "ANN002",
    "ANN003",
    "ANN201",
    "ARG002",
    "ARG003",
    "C401",
    "COM812",
    "COM819",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D205",
    "D206",
    "D213",
    "D300",
    "D400",
    "D401",
    "D415",
    "DTZ005",
    "E111",
    "E114",
    "E117",
    "EM101",
    "EM102",
    "ERA001",
    "EXE002",
    "FBT",
    "FIX002",
    "G004",
    "INP001",
    "ISC001",
    "ISC002",
    "PERF401",
    "PLR0913",
    "PT009",
    "PT011",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "RET504",
    "RUF",
    "S101",
    "SIM108",
    "SIM118",
    "SLF001",
    "TC001",
    "TC002",
    "TD002",
    "TD003",
    "TID252",
    "TRY003",
]

exclude = ["target", "tmp", "data", "notebooks", "migrations"]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
